fdo#67045 - fix several nasty screen selection issues with presenter console.

Also add the ability to select the external screen (whatever it is) to the
configuration dialog.

Change-Id: I2c81175143ba8fdd7c9aee1dac433742c2a0ba69
Reviewed-on: https://gerrit.libreoffice.org/4971
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>